--- a/prepare_data.ipynb
+++ b/prepare_data.ipynb
@@ -140,27 +140,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "UnicodeEncodeError",
-     "evalue": "'ascii' codec can't encode characters in position 18-24: ordinal not in range(128)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mUnicodeEncodeError\u001b[0m                        Traceback (most recent call last)",
-      "\u001b[1;32m/data/boda/Arabic_makemore/prepare_data.ipynb Cell 10\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/data/boda/Arabic_makemore/prepare_data.ipynb#X12sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mprint\u001b[39m(driver(\u001b[39minput\u001b[39;49m\u001b[39m=\u001b[39;49m \u001b[39m'\u001b[39;49m\u001b[39mالجوهرة\u001b[39;49m\u001b[39m'\u001b[39;49m, itc\u001b[39m=\u001b[39;49marabic))\n",
-      "\u001b[1;32m/data/boda/Arabic_makemore/prepare_data.ipynb Cell 10\u001b[0m in \u001b[0;36mdriver\u001b[0;34m(input, itc)\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/data/boda/Arabic_makemore/prepare_data.ipynb#X12sZmlsZQ%3D%3D?line=31'>32</a>\u001b[0m             output \u001b[39m=\u001b[39m output\u001b[39m.\u001b[39mrstrip()\n\u001b[1;32m     <a href='vscode-notebook-cell:/data/boda/Arabic_makemore/prepare_data.ipynb#X12sZmlsZQ%3D%3D?line=32'>33</a>\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m---> <a href='vscode-notebook-cell:/data/boda/Arabic_makemore/prepare_data.ipynb#X12sZmlsZQ%3D%3D?line=33'>34</a>\u001b[0m     res \u001b[39m=\u001b[39m trans_request(\u001b[39minput\u001b[39;49m \u001b[39m=\u001b[39;49m \u001b[39minput\u001b[39;49m, itc \u001b[39m=\u001b[39;49m itc)\n\u001b[1;32m     <a href='vscode-notebook-cell:/data/boda/Arabic_makemore/prepare_data.ipynb#X12sZmlsZQ%3D%3D?line=34'>35</a>\u001b[0m     res \u001b[39m=\u001b[39m res\u001b[39m.\u001b[39mread()\n\u001b[1;32m     <a href='vscode-notebook-cell:/data/boda/Arabic_makemore/prepare_data.ipynb#X12sZmlsZQ%3D%3D?line=35'>36</a>\u001b[0m     output \u001b[39m=\u001b[39m \u001b[39mstr\u001b[39m(res, encoding \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39mutf-8\u001b[39m\u001b[39m'\u001b[39m)[\u001b[39m14\u001b[39m\u001b[39m+\u001b[39m\u001b[39m4\u001b[39m\u001b[39m+\u001b[39m\u001b[39mlen\u001b[39m(\u001b[39minput\u001b[39m):\u001b[39m-\u001b[39m\u001b[39m31\u001b[39m]\n",
-      "\u001b[1;32m/data/boda/Arabic_makemore/prepare_data.ipynb Cell 10\u001b[0m in \u001b[0;36mtrans_request\u001b[0;34m(input, itc)\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/data/boda/Arabic_makemore/prepare_data.ipynb#X12sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m \u001b[39m'''\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/data/boda/Arabic_makemore/prepare_data.ipynb#X12sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m \u001b[39m    input: the Arabizi word\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/data/boda/Arabic_makemore/prepare_data.ipynb#X12sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m \u001b[39m    itc: the language code \u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/data/boda/Arabic_makemore/prepare_data.ipynb#X12sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m \u001b[39m'''\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/data/boda/Arabic_makemore/prepare_data.ipynb#X12sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m conn \u001b[39m=\u001b[39m http\u001b[39m.\u001b[39mclient\u001b[39m.\u001b[39mHTTPSConnection(\u001b[39m'\u001b[39m\u001b[39minputtools.google.com\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m---> <a href='vscode-notebook-cell:/data/boda/Arabic_makemore/prepare_data.ipynb#X12sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m conn\u001b[39m.\u001b[39;49mrequest(\u001b[39m'\u001b[39;49m\u001b[39mGET\u001b[39;49m\u001b[39m'\u001b[39;49m, \u001b[39m'\u001b[39;49m\u001b[39m/request?text=\u001b[39;49m\u001b[39m'\u001b[39;49m \u001b[39m+\u001b[39;49m \u001b[39minput\u001b[39;49m \u001b[39m+\u001b[39;49m \u001b[39m'\u001b[39;49m\u001b[39m&itc=\u001b[39;49m\u001b[39m'\u001b[39;49m \u001b[39m+\u001b[39;49m itc )\n\u001b[1;32m     <a href='vscode-notebook-cell:/data/boda/Arabic_makemore/prepare_data.ipynb#X12sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m res \u001b[39m=\u001b[39m conn\u001b[39m.\u001b[39mgetresponse()\n\u001b[1;32m     <a href='vscode-notebook-cell:/data/boda/Arabic_makemore/prepare_data.ipynb#X12sZmlsZQ%3D%3D?line=18'>19</a>\u001b[0m \u001b[39mreturn\u001b[39;00m res\n",
-      "File \u001b[0;32m~/anaconda3/envs/dl/lib/python3.10/http/client.py:1282\u001b[0m, in \u001b[0;36mHTTPConnection.request\u001b[0;34m(self, method, url, body, headers, encode_chunked)\u001b[0m\n\u001b[1;32m   1279\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mrequest\u001b[39m(\u001b[39mself\u001b[39m, method, url, body\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m, headers\u001b[39m=\u001b[39m{}, \u001b[39m*\u001b[39m,\n\u001b[1;32m   1280\u001b[0m             encode_chunked\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m):\n\u001b[1;32m   1281\u001b[0m     \u001b[39m\"\"\"Send a complete request to the server.\"\"\"\u001b[39;00m\n\u001b[0;32m-> 1282\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_send_request(method, url, body, headers, encode_chunked)\n",
-      "File \u001b[0;32m~/anaconda3/envs/dl/lib/python3.10/http/client.py:1293\u001b[0m, in \u001b[0;36mHTTPConnection._send_request\u001b[0;34m(self, method, url, body, headers, encode_chunked)\u001b[0m\n\u001b[1;32m   1290\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39m'\u001b[39m\u001b[39maccept-encoding\u001b[39m\u001b[39m'\u001b[39m \u001b[39min\u001b[39;00m header_names:\n\u001b[1;32m   1291\u001b[0m     skips[\u001b[39m'\u001b[39m\u001b[39mskip_accept_encoding\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[0;32m-> 1293\u001b[0m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mputrequest(method, url, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mskips)\n\u001b[1;32m   1295\u001b[0m \u001b[39m# chunked encoding will happen if HTTP/1.1 is used and either\u001b[39;00m\n\u001b[1;32m   1296\u001b[0m \u001b[39m# the caller passes encode_chunked=True or the following\u001b[39;00m\n\u001b[1;32m   1297\u001b[0m \u001b[39m# conditions hold:\u001b[39;00m\n\u001b[1;32m   1298\u001b[0m \u001b[39m# 1. content-length has not been explicitly set\u001b[39;00m\n\u001b[1;32m   1299\u001b[0m \u001b[39m# 2. the body is a file or iterable, but not a str or bytes-like\u001b[39;00m\n\u001b[1;32m   1300\u001b[0m \u001b[39m# 3. Transfer-Encoding has NOT been explicitly set by the caller\u001b[39;00m\n\u001b[1;32m   1302\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39m'\u001b[39m\u001b[39mcontent-length\u001b[39m\u001b[39m'\u001b[39m \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m header_names:\n\u001b[1;32m   1303\u001b[0m     \u001b[39m# only chunk body if not explicitly set for backwards\u001b[39;00m\n\u001b[1;32m   1304\u001b[0m     \u001b[39m# compatibility, assuming the client code is already handling the\u001b[39;00m\n\u001b[1;32m   1305\u001b[0m     \u001b[39m# chunking\u001b[39;00m\n",
-      "File \u001b[0;32m~/anaconda3/envs/dl/lib/python3.10/http/client.py:1131\u001b[0m, in \u001b[0;36mHTTPConnection.putrequest\u001b[0;34m(self, method, url, skip_host, skip_accept_encoding)\u001b[0m\n\u001b[1;32m   1127\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_validate_path(url)\n\u001b[1;32m   1129\u001b[0m request \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39m%s\u001b[39;00m\u001b[39m \u001b[39m\u001b[39m%s\u001b[39;00m\u001b[39m \u001b[39m\u001b[39m%s\u001b[39;00m\u001b[39m'\u001b[39m \u001b[39m%\u001b[39m (method, url, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_http_vsn_str)\n\u001b[0;32m-> 1131\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_output(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_encode_request(request))\n\u001b[1;32m   1133\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_http_vsn \u001b[39m==\u001b[39m \u001b[39m11\u001b[39m:\n\u001b[1;32m   1134\u001b[0m     \u001b[39m# Issue some standard headers for better HTTP/1.1 compliance\u001b[39;00m\n\u001b[1;32m   1136\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m skip_host:\n\u001b[1;32m   1137\u001b[0m         \u001b[39m# this header is issued *only* for HTTP/1.1\u001b[39;00m\n\u001b[1;32m   1138\u001b[0m         \u001b[39m# connections. more specifically, this means it is\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m   1148\u001b[0m         \u001b[39m# but the host of the actual URL, not the host of the\u001b[39;00m\n\u001b[1;32m   1149\u001b[0m         \u001b[39m# proxy.\u001b[39;00m\n",
-      "File \u001b[0;32m~/anaconda3/envs/dl/lib/python3.10/http/client.py:1211\u001b[0m, in \u001b[0;36mHTTPConnection._encode_request\u001b[0;34m(self, request)\u001b[0m\n\u001b[1;32m   1209\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m_encode_request\u001b[39m(\u001b[39mself\u001b[39m, request):\n\u001b[1;32m   1210\u001b[0m     \u001b[39m# ASCII also helps prevent CVE-2019-9740.\u001b[39;00m\n\u001b[0;32m-> 1211\u001b[0m     \u001b[39mreturn\u001b[39;00m request\u001b[39m.\u001b[39;49mencode(\u001b[39m'\u001b[39;49m\u001b[39mascii\u001b[39;49m\u001b[39m'\u001b[39;49m)\n",
-      "\u001b[0;31mUnicodeEncodeError\u001b[0m: 'ascii' codec can't encode characters in position 18-24: ordinal not in range(128)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(driver(input= 'الجوهرة', itc=arabic))"
    ]
@@ -187,6 +169,58 @@
     "res = trans_request(input = \"ليه\".encode(\"utf-8\"), itc = english)\n",
     "\n",
     "res.read()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "import re\n",
+    "with open('data/combined_english_names.txt','r') as f:\n",
+    "    names = [x.strip().lower() for x in f.readlines()]\n",
+    "\n",
+    "\n",
+    "names = [x.replace(' ','-') for x in names]\n",
+    "names = [x[1:] if x.startswith('aa')else x for x in names  ]\n",
+    "\n",
+    "names = [re.sub(r'[^a-z\\-]','',x) for x in names]\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "58854\n",
+      "52812\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(names))\n",
+    "\n",
+    "names = list(set(names))\n",
+    "\n",
+    "print(len(names))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('data/combined_english_names_cleaned.txt','w') as f:\n",
+    "    for l in names:\n",
+    "        f.write(l + '\\n')"
    ]
   },
   {
