add first 3 lectures and cleaned code

--- a/english_makemore_1.ipynb
+++ b/english_makemore_1.ipynb
@@ -1,8 +1,27 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Intro\n",
+    "This notebook has two parts\n",
+    "- building statistical bi-gram model\n",
+    "- building Single layers bi-gram model"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data preparation\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,30 +32,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/abdelrahman.atef/anaconda3/envs/dl/lib/python3.10/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torch\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "bi_grams = torch.zeros((27,27), dtype= torch.int32)\n",
     "\n",
     "chars = sorted(list(set(''.join(names))))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +79,7 @@
        " 'z']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -81,20 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "stoi = {s:i+1 for i,s in enumerate(chars)}\n",
-    "stoi['-'] = 1\n",
-    "stoi['.'] = 0\n",
-    "\n",
-    "itos = {s:i for i,s in stoi.items()}\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -129,18 +125,23 @@
        " '.': 0}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "stoi"
+    "stoi = {s:i+1 for i,s in enumerate(chars)}\n",
+    "stoi['-'] = 1\n",
+    "stoi['.'] = 0\n",
+    "\n",
+    "itos = {s:i for i,s in stoi.items()}\n",
+    "stoi\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +176,7 @@
        " 0: '.'}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,11 +186,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Statistical Bi-gram "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
+    "bi_grams = torch.zeros((27,27), dtype= torch.int32)\n",
+    "\n",
     "for name in names:\n",
     "    chrs = ['.'] + list(name) + ['.']\n",
     "\n",
@@ -199,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +298,7 @@
        "             2,    11,   154,     0,    61,     8,    59]], dtype=torch.int32)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,27 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "27"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(stoi)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +318,7 @@
        "(-0.5, 26.5, 26.5, -0.5)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -360,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,23 +359,16 @@
     "\n",
     "## we add one for model smoothing, so we don't get infinity for bi-grams  that has 0 occurrence \n",
     "p = (bi_grams+1).float()\n",
-    "p = p/torch.sum(p, axis=1,keepdim=True)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# convert counts into probabilities\n",
+    "p = p/torch.sum(p, axis=1,keepdim=True)\n",
     "for  i in range(bi_grams.shape[0]):\n",
-    "    # print (abs((torch.sum(p[i]).item() - 1.0)))\n",
+    "    # assert the row sum is one\n",
     "    assert abs((torch.sum(p[i]).item() - 1.0)) < 1e-6"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,22 +411,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10000/10000 [00:02<00:00, 3374.50it/s]"
+      "100%|██████████| 10000/10000 [00:02<00:00, 3576.00it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7.3565\n",
-      "25.8574\n"
+      " Avg Length of generated words is: 7.3559\n",
+      " Avg Length of random words is: 26.0953\n"
      ]
     },
     {
@@ -469,15 +452,16 @@
     "    l1 += len(generate_word())\n",
     "    l2 += len(generate_random())\n",
     "\n",
-    "print(l1/N)\n",
-    "print(l2/N)\n",
+    "print(f' Avg Length of generated words is: {l1/N}')\n",
+    "print(f' Avg Length of random words is: {l2/N}')\n",
+    "\n",
     "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -499,10 +483,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Observation\n",
+    "### Observation\n",
     "We can see here, that the avg length of generated words using bi-gram model is the same as the avg length of the words in the dataset.\n",
     "\n",
     "And the average length of the words generated randomly is the same as number of letters in the alphabet (26)"
@@ -510,18 +495,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sh\n",
-      "skn\n",
-      "ki\n",
-      "alamz\n",
-      "t\n"
+      "amala\n",
+      "ani\n",
+      "ai\n",
+      "abdouri\n",
+      "abdlala\n"
      ]
     }
    ],
@@ -532,26 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([1.0000, 1.0000, 1.0000, 1.0000, 1.0000, 1.0000, 1.0000, 1.0000, 1.0000,\n",
-      "        1.0000, 1.0000, 1.0000, 1.0000, 1.0000, 1.0000, 1.0000, 1.0000, 1.0000,\n",
-      "        1.0000, 1.0000, 1.0000, 1.0000, 1.0000, 1.0000, 1.0000, 1.0000, 1.0000])\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(p.sum(1))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -564,8 +530,9 @@
     }
    ],
    "source": [
-    "nll = 0\n",
+    "## calculating avg log liklihood of the dataset\n",
     "\n",
+    "nll = 0\n",
     "n = 0\n",
     "for name in names:\n",
     "    chrs = ['.'] + list(name) + ['.']\n",
@@ -585,15 +552,16 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Building Bi-Gram NN "
+    "## Building Bi-Gram NN using one hot vector encoding"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -630,16 +598,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fb8dcae2dd0>"
+       "<matplotlib.image.AxesImage at 0x7fdbd5455ae0>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -660,16 +628,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_1168382/1811889316.py:4: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "/tmp/ipykernel_4042731/1811889316.py:4: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
       "  x = torch.tensor(x)\n",
-      "/tmp/ipykernel_1168382/1811889316.py:5: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "/tmp/ipykernel_4042731/1811889316.py:5: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
       "  y = torch.tensor(y)\n"
      ]
     }
@@ -685,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -702,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -711,7 +679,7 @@
        "torch.Size([12, 27])"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -722,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -849,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -881,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -910,7 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -919,7 +887,7 @@
        "3.6701314449310303"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -930,7 +898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 375,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -959,14 +927,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 378,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.4132230281829834\n"
+      "2.5386388301849365\n"
      ]
     }
    ],
@@ -980,23 +948,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 381,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "bamjamai.\n",
-      "karaldii.\n",
-      "adalkhizbuieazamuhalshalalior.\n",
-      "dano.\n",
-      "qtibdr.\n",
-      "maborifalwali.\n",
-      "dkbad.\n",
-      "shn.\n",
-      "neihilpabalbisalsal-hahaal.\n",
-      "salalwakwtf.\n"
+      "alsailaljr.\n",
+      "algalzbdh.\n",
+      "al.\n",
+      "almequn.\n",
+      "ardab.\n",
+      "alalkan.\n",
+      "ai.\n",
+      "aymalkbabi.\n",
+      "a.\n",
+      "alhoi.\n"
      ]
     }
    ],
@@ -1008,21 +976,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 387,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10000/10000 [00:05<00:00, 1742.36it/s]"
+      "100%|██████████| 10000/10000 [00:03<00:00, 2734.22it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "11.8413\n"
+      "7.7441\n"
      ]
     },
     {
@@ -1046,11 +1014,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Observations\n",
+    "\n",
+    "we see that we still got the same avg length  which is 7"
+   ]
   }
  ],
  "metadata": {
@@ -1069,7 +1039,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6 (main, Oct 24 2022, 16:07:47) [GCC 11.2.0]"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
