--- a/prepare_data.ipynb
+++ b/prepare_data.ipynb
@@ -225,6 +225,78 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('data/combined_arabic_names_cleaned.txt','r') as f:\n",
+    "\n",
+    "    names = [x.strip().lower() for x in f.readlines()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['.', 'ء', 'آ', 'أ', 'ؤ', 'إ', 'ئ', 'ا', 'ب', 'ة', 'ت', 'ث', 'ج', 'ح', 'خ', 'د', 'ذ', 'ر', 'ز', 'س', 'ش', 'ص', 'ض', 'ط', 'ظ', 'ع', 'غ', 'ف', 'ق', 'ك', 'ل', 'م', 'ن', 'ه', 'و', 'ى', 'ي']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "37"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chars = ['.'] + sorted(list(set(''.join(names))))\n",
+    "\n",
+    "print(chars)\n",
+    "len(chars)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "for i,n in enumerate(names):\n",
+    "    names [i] = re.sub(r\"[^ء-ي]\",'',n)\n",
+    "    \n",
+    "    if n.startswith('أل'):\n",
+    "        names[i] = 'ال' + n[2:]\n",
+    "\n",
+    "\n",
+    "chars = ['.'] + sorted(list(set(''.join(names))))\n",
+    "\n",
+    "# print('\\n'.join(chars))\n",
+    "len(chars)\n",
+    "\n",
+    "with open('data/combined_arabic_names_cleaned.txt','w') as f:\n",
+    "    for n in names:\n",
+    "        f.write(f'{n}\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
