--- a/build_makemore.ipynb
+++ b/build_makemore.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Intro\n",
+    "This notebook just gives statistics about our datast\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1200,7 +1209,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.6 (main, Oct 24 2022, 16:07:47) [GCC 11.2.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
