--- a/makemore_part1_bigrams.ipynb
+++ b/makemore_part1_bigrams.ipynb
@@ -1926,7 +1926,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.6 ('dl')",
+   "display_name": "dl",
    "language": "python",
    "name": "python3"
   },
@@ -1940,7 +1940,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.6 (main, Oct 24 2022, 16:07:47) [GCC 11.2.0]"
   },
   "vscode": {
    "interpreter": {
